--- a/v1dx11rr/v1dx11rr.vcxproj
+++ b/v1dx11rr/v1dx11rr.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="ModeloRR.h" />
     <ClInclude Include="SkyDome.h" />
     <ClInclude Include="TerrenoRR.h" />
+    <ClInclude Include="Tiempo.h" />
     <ClInclude Include="XACT3Util.h" />
   </ItemGroup>
   <ItemGroup>
@@ -176,6 +177,7 @@
   <ItemGroup>
     <FxCompile Include="Billboard.hlsl" />
     <FxCompile Include="Modelo.fx" />
+    <FxCompile Include="Water.fx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
