--- a/v1dx11rr/v1dx11rr.vcxproj.filters
+++ b/v1dx11rr/v1dx11rr.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClInclude Include="Tiempo.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="GUI.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Text.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader.fx">
@@ -75,6 +81,12 @@
       <Filter>Archivos de código fuente</Filter>
     </FxCompile>
     <FxCompile Include="Water.fx">
+      <Filter>Archivos de código fuente</Filter>
+    </FxCompile>
+    <FxCompile Include="GUI.fx">
+      <Filter>Archivos de código fuente</Filter>
+    </FxCompile>
+    <FxCompile Include="Text.fx">
       <Filter>Archivos de código fuente</Filter>
     </FxCompile>
   </ItemGroup>
